# evtscripts

./: .gitignore  prepare_bookmarklet_output_for_bulk_load.py  pyproject.toml
evtscripts/: __init__.py
evtscripts/2025-12-18 - TRB EmpLive Dev/: data_profiling.py  profile_trb_emplive_data.py  trb_emp_02.sql
evtscripts/datetime_utils/: current_dt.py
evtscripts/examples/: snowflake_to_df.py
evtscripts/query_utils/: query_snowflake.py
